--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "noer",
   "version": "10.0.11",
   "description": "Simple node webserver",
-  "main": "main.js",
+  "main": "index.js",
   "author": "alexsch01",
   "license": "MIT",
   "keywords": [
